finished tests and swagger
